--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "gatsby": "^2.24.79",
     "gatsby-alias-imports": "^1.0.4",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-canonical-urls": "^2.3.13",
+    "gatsby-plugin-google-analytics": "^2.3.19",
     "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-offline": "^3.2.33",
     "gatsby-plugin-react-helmet": "^3.3.14",
@@ -30,6 +32,7 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.21.4",
     "gatsby-plugin-eslint": "^2.0.8",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.13",
     "prettier": "2.1.2"
   },
   "keywords": [
