--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@prismicio/gatsby-source-prismic-graphql": "^3.6.13",
     "gatsby": "^2.24.79",
     "gatsby-alias-imports": "^1.0.4",
     "gatsby-image": "^2.4.21",
@@ -17,6 +18,7 @@
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.34",
     "gatsby-transformer-sharp": "^2.5.17",
+    "prismic-reactjs": "^1.3.3",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
